docs/api/qiskit/0.27/qiskit.algorithms.optimizers.BOBYQA.mdx
---
title: BOBYQA
description: API reference for qiskit.algorithms.optimizers.BOBYQA
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.BOBYQA
---

# qiskit.algorithms.optimizers.BOBYQA

<Class id="qiskit.algorithms.optimizers.BOBYQA" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/optimizers/bobyqa.py" signature="BOBYQA(maxiter=1000)" modifiers="class">
  Bound Optimization BY Quadratic Approximation algorithm.

  BOBYQA finds local solutions to nonlinear, non-convex minimization problems with optional bound constraints, without requirement of derivatives of the objective function.

  Uses skquant.opt installed with pip install scikit-quant. For further detail, please refer to [https://github.com/scikit-quant/scikit-quant](https://github.com/scikit-quant/scikit-quant) and [https://qat4chem.lbl.gov/software](https://qat4chem.lbl.gov/software).

  **Parameters**

  **maxiter** (`int`) – Maximum number of function evaluations.

  **Raises**

  [**MissingOptionalLibraryError**](qiskit.aqua.MissingOptionalLibraryError "qiskit.aqua.MissingOptionalLibraryError") – scikit-quant not installed

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.optimizers.BOBYQA.__init__" signature="__init__(maxiter=1000)">
    **Parameters**

    **maxiter** (`int`) – Maximum number of function evaluations.

    **Raises**

    [**MissingOptionalLibraryError**](qiskit.aqua.MissingOptionalLibraryError "qiskit.aqua.MissingOptionalLibraryError") – scikit-quant not installed
  </Function>

  ## Methods

  |                                                                                                                                                                    |                                                                                                           |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.optimizers.BOBYQA.__init__ "qiskit.algorithms.optimizers.BOBYQA.__init__")(\[maxiter])                                             | **type maxiter**`int`                                                                                     |
  | [`get_support_level`](#qiskit.algorithms.optimizers.BOBYQA.get_support_level "qiskit.algorithms.optimizers.BOBYQA.get_support_level")()                            | Returns support level dictionary.                                                                         |
  | [`gradient_num_diff`](#qiskit.algorithms.optimizers.BOBYQA.gradient_num_diff "qiskit.algorithms.optimizers.BOBYQA.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
  | [`optimize`](#qiskit.algorithms.optimizers.BOBYQA.optimize "qiskit.algorithms.optimizers.BOBYQA.optimize")(num\_vars, objective\_function\[, …])                   | Runs the optimization.                                                                                    |
  | [`print_options`](#qiskit.algorithms.optimizers.BOBYQA.print_options "qiskit.algorithms.optimizers.BOBYQA.print_options")()                                        | Print algorithm-specific options.                                                                         |
  | [`set_max_evals_grouped`](#qiskit.algorithms.optimizers.BOBYQA.set_max_evals_grouped "qiskit.algorithms.optimizers.BOBYQA.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
  | [`set_options`](#qiskit.algorithms.optimizers.BOBYQA.set_options "qiskit.algorithms.optimizers.BOBYQA.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
  | [`wrap_function`](#qiskit.algorithms.optimizers.BOBYQA.wrap_function "qiskit.algorithms.optimizers.BOBYQA.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

  ## Attributes

  |                                                                                                                                                                     |                                     |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
  | [`bounds_support_level`](#qiskit.algorithms.optimizers.BOBYQA.bounds_support_level "qiskit.algorithms.optimizers.BOBYQA.bounds_support_level")                      | Returns bounds support level        |
  | [`gradient_support_level`](#qiskit.algorithms.optimizers.BOBYQA.gradient_support_level "qiskit.algorithms.optimizers.BOBYQA.gradient_support_level")                | Returns gradient support level      |
  | [`initial_point_support_level`](#qiskit.algorithms.optimizers.BOBYQA.initial_point_support_level "qiskit.algorithms.optimizers.BOBYQA.initial_point_support_level") | Returns initial point support level |
  | [`is_bounds_ignored`](#qiskit.algorithms.optimizers.BOBYQA.is_bounds_ignored "qiskit.algorithms.optimizers.BOBYQA.is_bounds_ignored")                               | Returns is bounds ignored           |
  | [`is_bounds_required`](#qiskit.algorithms.optimizers.BOBYQA.is_bounds_required "qiskit.algorithms.optimizers.BOBYQA.is_bounds_required")                            | Returns is bounds required          |
  | [`is_bounds_supported`](#qiskit.algorithms.optimizers.BOBYQA.is_bounds_supported "qiskit.algorithms.optimizers.BOBYQA.is_bounds_supported")                         | Returns is bounds supported         |
  | [`is_gradient_ignored`](#qiskit.algorithms.optimizers.BOBYQA.is_gradient_ignored "qiskit.algorithms.optimizers.BOBYQA.is_gradient_ignored")                         | Returns is gradient ignored         |
  | [`is_gradient_required`](#qiskit.algorithms.optimizers.BOBYQA.is_gradient_required "qiskit.algorithms.optimizers.BOBYQA.is_gradient_required")                      | Returns is gradient required        |
  | [`is_gradient_supported`](#qiskit.algorithms.optimizers.BOBYQA.is_gradient_supported "qiskit.algorithms.optimizers.BOBYQA.is_gradient_supported")                   | Returns is gradient supported       |
  | [`is_initial_point_ignored`](#qiskit.algorithms.optimizers.BOBYQA.is_initial_point_ignored "qiskit.algorithms.optimizers.BOBYQA.is_initial_point_ignored")          | Returns is initial point ignored    |
  | [`is_initial_point_required`](#qiskit.algorithms.optimizers.BOBYQA.is_initial_point_required "qiskit.algorithms.optimizers.BOBYQA.is_initial_point_required")       | Returns is initial point required   |
  | [`is_initial_point_supported`](#qiskit.algorithms.optimizers.BOBYQA.is_initial_point_supported "qiskit.algorithms.optimizers.BOBYQA.is_initial_point_supported")    | Returns is initial point supported  |
  | [`setting`](#qiskit.algorithms.optimizers.BOBYQA.setting "qiskit.algorithms.optimizers.BOBYQA.setting")                                                             | Return setting                      |

  ## Members list

  ### bounds\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.bounds_support_level">
    Returns bounds support level
  </Attribute>

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.BOBYQA.get_support_level" signature="get_support_level()">
    Returns support level dictionary.
  </Function>

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.BOBYQA.gradient_num_diff" signature="gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  ### gradient\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.gradient_support_level">
    Returns gradient support level
  </Attribute>

  ### initial\_point\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.initial_point_support_level">
    Returns initial point support level
  </Attribute>

  ### is\_bounds\_ignored

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  ### is\_bounds\_required

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_bounds_required">
    Returns is bounds required
  </Attribute>

  ### is\_bounds\_supported

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  ### is\_gradient\_ignored

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  ### is\_gradient\_required

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_gradient_required">
    Returns is gradient required
  </Attribute>

  ### is\_gradient\_supported

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  ### is\_initial\_point\_required

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_initial_point_required">
    Returns is initial point required
  </Attribute>

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  ### optimize

  <Function id="qiskit.algorithms.optimizers.BOBYQA.optimize" signature="optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Runs the optimization.
  </Function>

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.BOBYQA.print_options" signature="print_options()">
    Print algorithm-specific options.
  </Function>

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.BOBYQA.set_max_evals_grouped" signature="set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.BOBYQA.set_options" signature="set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  ### setting

  <Attribute id="qiskit.algorithms.optimizers.BOBYQA.setting">
    Return setting
  </Attribute>

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.BOBYQA.wrap_function" signature="wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

